--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 0 40px;
+    padding: 40px;
     height: 100%;
 }
 
@@ -87,7 +87,7 @@ body{
 
 .form-container{
     position: absolute;
-    top: 0;
+    top: 35px;
     height: 100%;
     transition: all 0.6s ease-in-out;
 }
